--- a/src/main/resources/static/css/App.css
+++ b/src/main/resources/static/css/App.css
@@ -10,7 +10,7 @@ body {
     filter: drop-shadow(2px 2px 2px rgba(0, 0, 0, 1));
     width: 90%;
     height: 90%;
-    padding-top: 10%;
+    padding: 5% 0 5% 0;
     margin: auto;
 }
 .App-logo {
