--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -9,7 +9,7 @@
     <div class="App-container">
         <img class="App-logo" src="assets/logo.png" alt="Logo">
         <h1>Hola Mundo!</h1>
-        <h3>Java Spring Boot</h3>
+        <h3>Error 404</h3>
         <a href="home">Home</a>
     </div>
 </body>
