--- a/src/main/resources/static/css/App.css
+++ b/src/main/resources/static/css/App.css
@@ -1,9 +1,11 @@
 body {
     background-color: #fff;
+    font-family:Arial; 
     padding: calc(20px + 4vmin);
 }
 a {
     text-decoration: none;
+    padding: calc(5px + 4vmin);
 }
 
 .App-container {
@@ -23,13 +25,11 @@ a {
 }
 h1 {
     color:#1d4596;
-    font-family:Arial; 
     font-size: calc(20px + 6vmin);
     text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
 }
 h3 {
     color:#eb4e27;
-    font-family:Arial; 
     font-size: calc(10px + 4vmin);
     text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);    
 }
