--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,7 +10,7 @@
         <img class="App-logo" src="assets/logo.png" alt="Logo">
         <h1>Hola Mundo!</h1>
         <h3>Java Spring Boot</h3>
-        <a href="home">Home</a>
+        <a href="home">Ingresar</a>
     </div>
 </body>
 </html>
