--- a/src/main/resources/static/css/App.css
+++ b/src/main/resources/static/css/App.css
@@ -5,7 +5,7 @@ body {
 }
 a {
     text-decoration: none;
-    padding: calc(5px + 4vmin);
+    font-size: calc(5px + 4vmin);
 }
 
 .App-container {
