--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -1,16 +1,17 @@
 <!DOCTYPE HTML>
-<html>
-<head> 
-    <title>Java App</title> 
-    <link href="css/App.css" rel="stylesheet">
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-</head>
-<body>
-    <div class="App-container">
-        <img class="App-logo" src="assets/logo.png" alt="Logo">
-        <h1>Hola Mundo!</h1>
-        <h3>Error 404</h3>
-        <a href="home">Home</a>
-    </div>
-</body>
+<html lang="es-CO">
+    <head> 
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Java App</title> 
+        <link href="css/App.css" rel="stylesheet">
+    </head>
+    <body>
+        <div class="App-container">
+            <img class="App-logo" src="assets/logo.png" alt="Logo">
+            <h1>Hola Mundo!</h1>
+            <h3>Error 404</h3>
+            <a href="home">Home</a>
+        </div>
+    </body>
 </html>
