--- a/src/main/resources/static/css/App.css
+++ b/src/main/resources/static/css/App.css
@@ -15,7 +15,7 @@ a {
     text-decoration: none;
     font-size: calc(5px + 3vmin);
     background-color: var(--orange-color);
-    padding: 0 10px 0 10px;
+    padding: 5px 50px 5px 50px;
     border-radius: 50px;
 }
 
